@@ -10,6 +10,7 @@
     * New highlighting interface
     * Add ability to highlight all admins, mods or VIPs
     * Add the GameFAQs clock to QuickPost
+    * Redesign toolbar icons
 
 2010-05-12:
     * version 0.7.7
